Some added and changes
This releases contains -
 * Fixed CV overlapping in small screens
 * Added contacts sections

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </div>
 
         <div id="about-me" class="container shadow-lg">
-            <div class="row h-100 darken-bg">
+            <div class="row h-100 darken-bg pt-3 pt-lg-0">
                 <section class="col-12 col-lg-6 flex-n-center shadow-lg">
-                    <div id="pic-template" class="text-center">
-                        Picture
+                    <div id="pic-template">
+                        <img src="./images/IMG_20220201_114635 copy.png" alt=""></img>
                     </div>
                 </section>
                 <section id="name-n-text" class="col-12 col-lg-6 flex-n-center mt-5 mt-lg-0">
@@ -168,53 +168,76 @@
                 <div class="flex-n-center my-5">
                     <h1 class="text-center p-2 border border-dark">Curriculum Vitae</h1>
                 </div>
-                <div class="row mt-5">
-                    <section class="col-4 col-lg-5">
-                        <p>First Name</p>
-                        <p>Last Name</p>
-                        <p>Father's Name</p>
-                        <p>Mother's Name</p>
-                        <p>Date of Birth</p>
-                        <p>Maritial Status</p>
-                        <p>E-mail</p>
-                        <p>Phone No.</p>
-                        <p>Nationality</p>
-                        <p>Religion</p>
-                        <p>Address</p>
-                    </section>
-                    <section class="col-1 col-lg-2 text-center">
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                        <p>:</p>
-                    </section>
-                    <section class="col-7 col-lg-5">
-                        <p>Shawkat Hossain</p>
-                        <p>Maruf</p>
-                        <p>MD. Moklesur Rahman</p>
-                        <p>MST. Momena Begum</p>
-                        <p>30 December 2005</p>
-                        <p>Single</p>
-                        <p>shawkath646@gmail.com</p>
-                        <p>+880 1620-440645</p>
-                        <p>Bangladeshi</p>
-                        <p>Islam</p>
-                        <p>Vill : Narandi,&nbsp; P.O : Narandi Bazar</p>
-                        <p>Upazilla : Monohardi,&nbsp; District : Narsingdi</p>
-                        <p>Post Code : 0000</p>
-                    </section>
+                <div class="mt-5 ms-2 ms-lg-5">
+                    <table class="table table-bordered">
+          
+                        <tbody>
+                            <tr>
+                                <th scope="row">First Name</th>
+                                <td>:</td>
+                                <td>Shawkat Hossain</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Last Name</th>
+                                <td>:</td>
+                                <td>Maruf</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Father's Name</th>
+                                <td>:</td>
+                                <td>MD. Moklesur Rahman</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Mother's Name</th>
+                                <td>:</td>
+                                <td>MST. Momena Begum</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Date of Birth</th>
+                                <td>:</td>
+                                <td>30 December 2005</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Maritial Status</th>
+                                <td>:</td>
+                                <td>Single</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">E-mail</th>
+                                <td>:</td>
+                                <td>shawkath646@gmail.com</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Phone No.</th>
+                                <td>:</td>
+                                <td>+880 1620-440645</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Nationality</th>
+                                <td>:</td>
+                                <td>Bangladeshi</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Religion</th>
+                                <td>:</td>
+                                <td>Islam</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Address</th>
+                                <td>:</td>
+                                <td>
+                                    <p>Vill : Narandi,&nbsp; P.O : Narandi Bazar</p>
+                                    <p>Upazilla : Monohardi,&nbsp; District : Narsingdi</p>
+                                    <p>Post Code : 0000</p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div class="flex-n-center my-5">
                     <h3 class="text-center p-2 border-bottom border-dark">Educational Qualification</h3>
                 </div>
-                <table class="table">
+                <table class="table table-striped">
                     <thead>
                         <tr>
                             <th scope="col">Exam Name</th>
@@ -225,19 +248,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                          <th scope="row">1</th>
+                          <th scope="row">PSC</th>
                           <td>Mark</td>
                           <td>Otto</td>
                           <td>@mdo</td>
                         </tr>
                         <tr>
-                          <th scope="row">2</th>
+                          <th scope="row">SSC</th>
                           <td>Jacob</td>
                           <td>Thornton</td>
                           <td>@fat</td>
                         </tr>
                         <tr>
-                          <th scope="row">3</th>
+                          <th scope="row">HSC</th>
                           <td>Larry</td>
                           <td>the Bird</td>
                           <td>@twitter</td>
@@ -247,9 +270,84 @@
             </div>
         </div>
 
+        <div id="educational-history" class="container shadow-lg py-3">
+            <div class="flex-n-center py-2">
+                <h3 class="text-center p-2 border-bottom border-dark">Educational History</h3>
+            </div>
+            <div class="m-2 mb-5 mx-lg-5">
+                <table class="table table-striped ">
+                    <thead>
+                        <tr>
+                            <th scope="col">Class</th>
+                            <th scope="col">Institiute</th>
+                            <th scope="col">Years</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Play - 4</th>
+                            <td>Sunrise Kinder Garden</td>
+                            <td>2009 - 2014</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4 - 5</th>
+                            <td>Narandi Jahanara Govt. Primary School</td>
+                            <td>2014 - 2015</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">6 - 10</th>
+                            <td>Monohardi Govt. Model Pilot High School</td>
+                            <td>2016 - 2021</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">11 - 12</th>
+                            <td>Narsingdi Model College</td>
+                            <td>2022 - *</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="bg-white p-3 border border-primary rounded-1 mx-0 mx-lg-5 my-3">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore eligendi accusamus eum ab porro aspernatur consequatur reprehenderit, non dolorum ad iure illo. Temporibus explicabo ullam ducimus harum consequatur optio natus.</p>
+            </div>
+            <div class="bg-white p-3 border border-primary rounded-1 mx-0 mx-lg-5">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore eligendi accusamus eum ab porro aspernatur consequatur reprehenderit, non dolorum ad iure illo. Temporibus explicabo ullam ducimus harum consequatur optio natus.</p>
+            </div>
+        </div>
+
+        <div id="contacts" class="container bg-white py-3">
+            <div class="flex-n-center py-3">
+                <h2>Contacts</h2>
+            </div>
+            <div class="flex-n-center">
+                <div class="social-icons shadow-lg p-5">
+                    <a href="https://www.facebook.com/shawkat.maruf" target="_blank" class="my-3 shadow-lg flex-n-center">
+                        <i class="fa fa-facebook"></i>Facebook
+                    </a>
+                    <a href="https://m.me/shawkat.maruf" target="_blank" class="my-3 shadow-lg flex-n-center">
+                        <i class="fab fa-facebook-messenger"></i>Messenger
+                    </a>
+                    <a href="https://www.instagram.com/shawkat.maruf" target="_blank" class="my-3 shadow-lg flex-n-center">
+                        <i class="fab fa-instagram"></i>Instagram
+                    </a>
+                    <a href="" target="_blank" class="my-3 shadow-lg flex-n-center">
+                        <i class="fab fa-whatsapp"></i>Whatsapp
+                    </a>
+                    <a href="" target="_blank"
+                    <a href="https://t.me/shmaruf" target="_blank" class="my-3 shadow-lg flex-n-center">
+                        <i class="fab fa-telegram"></i>Telegram
+                    </a>
+                    <a href="https://github.com/shawkath646" target="_blank" class="my-3 shadow-lg flex-n-center">
+                        <i class="fab fa-github"></i>Github
+                    </a>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/b4407c592e.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
